fix active section of left toc not changing color in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -325,7 +325,8 @@ footer {
   a,
   .docs-sidebar .docs-toc-item.active a,
   .docs-sidebar .nav>.active:hover>a,
-  .docs-sidebar .nav>.active>a {
+  .docs-sidebar .nav>.active>a,
+  .docs-sidebar .docs-toc-item.active span a {
     color: mix(white, $sta-primary-light, 50%);
   }
 
